# balancing_robot

./: CMakeLists.txt  README.md  package.xml
bringup/: CMakeLists.txt  package.xml
bringup/config/: robot_odom.yaml  ros2_controllers.yaml  twist_mux.yaml
bringup/launch/: launch_odom.py  launch_sim.py  rsp.launch.py  rsp_launch.py  rviz_launch.py
bringup/rviz/: rviz.rviz
control/: CMakeLists.txt  package.xml
control/src/: PID_compute_node.cpp  lqr_control_node.cpp
description/: CMakeLists.txt
description/model/: robot.sdf
description/urdf/: imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
description/worlds/: obstacles.world
launch/: rsp.launch.py
log/: latest_list
